popup.css
:root {
  /* Spacing */
  --gap: 0.3125rem;

  /* Generic colours */
  --text: hsl(0, 0%, 0%);
  --background: hsl(0, 0%, 100%);
  --border: hsl(214, 9%, 84%);
  --button: hsl(214, 9%, 84%);

  /* State colors */
  --absent: hsl(200, 2%, 48%);
  --present: hsl(49, 51%, 57%);
  --correct: hsl(115, 29%, 53%);
}

@media (prefers-color-scheme: dark) {
  :root {
    /* Generic colours */
    --text: hsl(0, 0%, 97%);
    --background: hsl(240, 3%, 7%);
    --border: hsl(240, 2%, 23%);
    --button: hsl(200, 1%, 51%);

    /* State colors */
    --absent: hsl(240, 2%, 23%);
    --present: hsl(49, 51%, 47%);
    --correct: hsl(115, 29%, 43%);
  }
}

html {
  box-sizing: border-box;
}

body {
  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  text-rendering: optimizeSpeed;
  width: 31.25rem;
  padding: 1.5rem;

  color: var(--text);
  background-color: var(--background);
}

main {
  display: grid;
  gap: 1.5rem;
  text-align: center;
  margin: auto;
}

h1,
p,
span {
  margin: 0;
  line-height: 1.5;
}

h1 {
  font-size: 3rem;
}

p {
  font-size: 1.75em;
  max-width: 32ch;
  text-wrap: balance;
  margin-inline: auto;
}

button {
  margin: auto;
  font-size: 1.5em;
  font-weight: 600;
  color: var(--color);
  background-color: var(--button);
  outline: transparent;
  padding: 1rem;
  border: 0;
  border-radius: 0.25em;
  cursor: pointer;
}

.row {
  display: flex;
  justify-content: center;
  gap: var(--gap);
  font-weight: bold;
  text-transform: uppercase;
}

.row span {
  display: grid;
  place-content: center;
  width: 3.75rem;
  aspect-ratio: 1;
  border: 0.125rem solid var(--border);
  font-size: 2rem;
  color: transparent;
  cursor: pointer;
  user-select: none;
}

.row .show {
  animation: flip 500ms;
  transition-property: background-color, border-color, color;
  transition-duration: 0ms;
  transition-delay: 250ms;
  background-color: var(--_result-color, var(--absent));
  border-color: var(--_result-color, var(--absent));
  color: var(--background);
  cursor: default;
}

.row .correct {
  --_result-color: var(--correct);
}

.row .present {
  --_result-color: var(--present);
}

.show-all .show {
  animation-delay: var(--_a-delay);
  transition-delay: var(--_t-delay);
}

@keyframes flip {
  50% {
    transform: rotateX(90deg);
  }
}

/* Toggle css from  https://codepen.io/cl0udc0ntr0l/pen/njQQbw */
#switch {
  top: 1em;
  right: 1em;
  width: 50px;
  height: 26.67px;
}

.toggle {
  position: absolute;
  border: 1.5px solid #444249;
  border-radius: 13.33px;
  transition: border-color 0.6s ease-out;
  box-sizing: border-box;
  user-select: none;
}

.toggle.toggle-on {
  border-color: #89c2d966;
  transition: all 0.5s 0.15s ease-out;
}

.toggle-button {
  position: absolute;
  top: 2.67px;
  width: 18.667px;
  bottom: 2.67px;
  right: 26px;
  background-color: #444249;
  border-radius: 12.6px;
  cursor: pointer;
  transition: all 0.3s 0.1s, width 0.1s, top 0.1s, bottom 0.1s;
}

.toggle-on .toggle-button {
  top: 2px;
  width: 43.3px;
  bottom: 2px;
  right: 2px;
  border-radius: 15.3px;
  background-color: hsl(0, 52%, 50%);
  box-shadow: 0 0 16px hsl(0, 31%, 32%);
  transition: all 0.2s 0.1s, right 0.1s;
}

.toggle-text-on {
  position: absolute;
  inset: 0;
  line-height: 24px;
  text-align: center;
  font-size: 12px;
  font-weight: normal;
  cursor: pointer;

  color: rgba(0, 0, 0, 0);
}

.toggle-on .toggle-text-on {
  color: white;
  transition: color 0.3s 0.15s;
}

.toggle-text-off {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 4px;
  line-height: 24px;
  text-align: center;
  font-size: 9px;
  font-weight: bold;
  cursor: pointer;

  color: #444249;
}

.toggle-on .toggle-text-off {
  color: rgba(0, 0, 0, 0);
}

/* used for streak effect */
.glow-comp {
  position: absolute;
  opacity: 0;
  inset: 6.667;
  border-radius: 4px;
  background-color: rgba(75, 122, 141, 0.1);
  box-shadow: 0 0 8px rgba(75, 122, 141, 0.2);
  transition: opacity 4.5s 1s;
}

.toggle-on .glow-comp {
  opacity: 1;
  transition: opacity 1s;
}

